<resources>
    <string name="app_name">LightCalculator</string>
    <string name="result"></string>
    <string name="pre_result"></string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="borrar">BORRAR</string>
    <string name="enter">ENTER</string>
    <string name="plus_button">+</string>
    <string name="minus_button">-</string>
    <string name="multiply_button">*</string>
    <string name="division_button">/</string>
    <string name="casanaselectronics">CasanasElectronics®</string>
</resources>